@@ -732,4 +732,8 @@
 
 2010-12-17
 	* libgpukernel: functional simulation.
+	* syscall.c: syscall 'write': bug fixed. After the las modifications in the handling of
+		asynchronous system calls, a bug was introduced in the synchronous write.
+		This bug might affect any simple execution.
+
 
